--- a/o-book-main/quickStart/index.html
+++ b/o-book-main/quickStart/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Roadmap-backend</title>
-    <script src="./ofa.js"></script>
+    <title>title</title>
+    <script src="https://cdn.jsdelivr.net/gh/kirakiray/ofa.js@latest/dist/ofa.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kirakiray/o-book@latest/o-book.js"></script>
     <style>
         html,
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <o-book summary="SUMMARY.md" home="docs/readme.md" style="height:100%;">
+    <o-book summary="SUMMARY.md" home="readme.md" style="height:100%;">
         <div style="display:flex;width:100%;height:100%;justify-content:center;align-items:center;">Loading...</div>
     </o-book>
 </body>
