--- a/o-book-main/website/index.html
+++ b/o-book-main/website/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Roadmap-backend</title>
-    <script src="./ofa.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/kirakiray/o-book@latest/o-book.js"></script>
+    <title>o-book</title>
+    <script src="https://cdn.jsdelivr.net/gh/kirakiray/ofa.js/dist/ofa.js"></script>
+    <!-- <script src="http://127.0.0.1:5513/dist/ofa.js"></script> -->
+    <script src="../o-book.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/kirakiray/o-book/o-book.js"></script> -->
     <style>
         html,
         body {
