--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roadmap-backend</title>
     <script src="./ofa.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/kirakiray/o-book@latest/o-book.js"></script>
+    <script src="o-book-main/o-book.js"></script>
     <style>
         html,
         body {
